# rpi-fan-serve

./: .gitignore  .gitmodules  README.md  SharedConfig.hpp  TempsCtrl.cc  TempsCtrl.h  configuration.hpp  dbus_server.hpp  debug.hpp  default.nix  main.cc  meson.build  meson_options.txt  shell.nix  socket_locker.h  socket_locker.hpp  utils.hpp  zmq_constants.hpp  zmq_dbus_client.hpp  zmq_dbus_server.hpp  zmq_pair_thread.hpp
dbus/: RpiFanServeObject.cpp  RpiFanServeObject.h  SignalHandler.cpp  SignalHandler.h  dbus-gen.py  dbus_adaptor.cpp  dbus_adaptor.h  dbus_proxy.cpp  dbus_proxy.h  dbus_server.cpp  dbus_server.h  main.cpp  meson.build  org.scotthamilton.RpiFanServe.conf  org.scotthamilton.RpiFanServe.conf.old  org.scotthamilton.RpiFanServe.service.in  org.scotthamilton.RpiFanServe.xml  org.scotthamilton.rpifanserve.service.in  zmq_dbus_client.hpp  zmq_pair_qthread.hpp
org/scotthamilton/: RpiFanServe.errors.yaml  RpiFanServe.interface.yaml
org/scotthamilton/RpiFanServe/: error.cpp  error.hpp  server.cpp  server.hpp
test/: meson.build  rpi-fan.log.1  test.nix
test/rpi-fan/: rpi-fan.log.1  rpi-fan.log.2  rpi-fan.log.3  rpi-fan.log.4  rpi-fan.log.5  rpi-fan.log.6  rpi-fan.log.7
tools/: meson.build  rpi-fan-serve-ctrl.cc
