test_log_files = [
  'rpi-fan/rpi-fan.log',
  'rpi-fan/rpi-fan.log.1',
  'rpi-fan/rpi-fan.log.2',
  'rpi-fan/rpi-fan.log.3',
  'rpi-fan/rpi-fan.log.4',
  'rpi-fan/rpi-fan.log.5',
  'rpi-fan/rpi-fan.log.6',
  'rpi-fan/rpi-fan.log.7',
]
install_data(test_log_files,
	install_dir: join_paths(datadir, 'tests'))
